[tool.poetry]
name = "app-15-chatbot-gpt"
version = "0.1.0"
description = ""
authors = ["Ofir <ofirfirst@gmail.com>"]
readme = "README.md"
packages = [{include = "app_15_chatbot_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.2"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
